--- a/game.html
+++ b/game.html
@@ -55,11 +55,11 @@
   <img class="back" src="hat.png" alt="hat">
 </div>
 <div class="card" data-symbol="nimbus">
-  <img class="front" src="Nimbus.png" alt="nimbus">
+  <img class="front" src="nimbus.png" alt="nimbus">
   <img class="back" src="hat.png" alt="hat">
 </div>
 <div class="card" data-symbol="nimbus">
-  <img class="front" src="Nimbus.png" alt="nimbus">
+  <img class="front" src="nimbus.png" alt="nimbus">
   <img class="back" src="hat.png" alt="hat">
 </div>
 <div class="card" data-symbol="cauldron">
